# richie-acc-bench

./: .gitmodules  README.md  vitis-hls-setup.sh
colordetect/: .gitignore  Makefile  run_hls.tcl  settings.tcl
colordetect/hls/src/: xf_colordetect_accel.cpp  xf_colordetect_config.h  xf_colordetect_tb.cpp
colordetect/sw/app/functions/: experiment.c  experiment.h  profiling.c  profiling.h
colordetect/sw/libs/hwpe_structs/: def_struct_hwpe_common.h
common/tcl/: run_hls.tcl
fast/hls.array_intf/: Makefile
fast/hls.array_intf/src/: xf_fast_accel.cpp  xf_fast_tb.cpp
fast/hls/src/: xf_fast_accel.cpp  xf_fast_config.h  xf_fast_tb.cpp
fast/hls_2/src/: xf_fast_accel.cpp  xf_fast_config.h
fast/sw/app/functions/: pulp_defs.h  (+1 more)
host/arm64/aes-128/: CMakeLists.txt  Makefile  README.md
host/arm64/aes-128/src/: main.cpp
host/arm64/aes-128/src/inc/: LCM.h  Taks.h  aes.h  aes256.c  aes256.h  aes_sw.h
host/arm64/aes-128/src/inc/axis_aes128_drivers/: axi_dma_driver.c  axis_aes128.c  axis_aes128.h
pulp/common/: overlay-bench.h
pulp/convolution/: Makefile
pulp/floonoc-test/fpga/: Makefile  def_struct_soc_perf_eval.h  floonoc_test.h  golden.c  main.c  noc_hw_dut.c  noc_sw_ref.c  xaxi_hls_tg_hw.h
pulp/floonoc-test/sim/: Makefile  floonoc_test.c  floonoc_test.h  noc_hw_dut.c  noc_sw_ref.c
pulp/matmul/: Makefile  README.md
pulp/vitis-vision/: vitis-hls-setup.sh
pulp/vitis-vision/tools/: install-opencv3.sh
xilinx/common/: local_setup.sh
xilinx/common/board/: zcu102.sh
xilinx/common/configfile/: iis.cfg  unimore.cfg
xilinx/convolution/: Makefile
(+269 files in other folders)
